--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -8,15 +8,15 @@
 ';
 
 #sidebar {
-  --site-title-color: #fff;
-  --site-subtitle-color: #999;
-  --sidebar-bg: #234863;;
-  --sidebar-border-color: #292929;
-  --sidebar-muted-color: #999;
-  --sidebar-active-color: rgb(255, 255, 255, 0.95);
-  --sidebar-hover-bg: #262626;
-  --sidebar-btn-bg: #232328;
-  --sidebar-btn-color: #787878;
-  --avatar-border-color: rgb(206, 206, 206, 0.9);
+  --site-title-color: #e8e6e3;
+  --site-subtitle-color: #a8a095;
+  --sidebar-bg: #1c3a4f;
+  --sidebar-border-color: #1f2123;
+  --sidebar-muted-color: #a8a095;
+  --sidebar-active-color: rgba(232, 230, 227, 0.95);
+  --sidebar-hover-bg: #1d1f20;
+  --sidebar-btn-bg: #1c1f20;
+  --sidebar-btn-color: #5a6266;
+  --sidebar-btn-color: #9c9487;
+  --avatar-border-color: rgba(52, 56, 58, 0.9);
 }
-
