--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,11 @@
 layout: default
 refactor: true
 ---
+<h1>About</h1>
+
+Welcome to my project portfolio! My name is Gabe Venegas, an undergraduate completing my Bachelors of Science in Computer Science. I am fascinated by the impact I can bring to others through my work, as well as solving cross-disciplinary problems. I thrive off strong collaboration among passionate peers, and enjoy engaging with other STEM disciplines.
+
+<h1>Projects</h1>
 
 {% include lang.html %}
 
